crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_strict_between_siblings.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (binary_expression "+" .! (identifier))
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "binary_expression"
S3 "+"
S4 "identifier"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   !   (binary_expression)              07
  07   ▽   "+"                              08
  08 !!▷   (identifier)                     09
  09   △   _                                10
  10                                        ▶
