crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_with_captured_anonymous.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (binary_expression "+" @op . (identifier))
---
[strings]
S0 "Beauty will save the world"
S1 "op"
S2 "Test"
S3 "binary_expression"
S4 "+"
S5 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { op }

[type_members]
M0: S1 → T0  ; op: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (binary_expression)              08
  07  ...  
  08  └‣─  _                                13, 16
  10  ─◦─  (identifier)                     11
  11  ─‣┘  _                                12
  12                                        ▶
  13   !   "+" [Node Set(M0)]               10
  15  ...  
  16  ─‣─  _                                13, 16
