crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_with_field_anonymous.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (pair key: (property_identifier) . value: _)
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "pair"
S3 "property_identifier"
S4 "key"
S5 "value"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (pair)                           07
  07  └‣─  key: (property_identifier)       08
  08  ─◦─  value: _                         09
  09  ─‣┘  _                                10
  10                                        ▶
