crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__anchors_with_mixed_alternation_classifies_each_branch.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = {(identifier) . [(number) "+"]}
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "identifier"
S3 "number"
S4 "+"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   (identifier)                     09, 10
  08                                        ▶
  09  ─•─  (number)                         08
  10  ─◦─  "+"                              08
